<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sunny" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/llError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone" >

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@drawable/sad_emo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="Không cập nhật được dữ liệu"
                    android:textColor="#9E9E9E"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="16dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/tvWeatherTemp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:paddingBottom="5dp"
                            android:paddingTop="10dp"
                            android:textColor="#ffffff"
                            android:textSize="80sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/tvWeatherTempMax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#ffffff"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/tvWeatherTempMin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:textColor="#ffffff"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal" >

                            <TextView
                                android:id="@+id/tvWeatherDesc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="#ffffff"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/ivWeatherIcon"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_marginLeft="5dp"
                                android:background="@drawable/thoi_tiet" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/pressure"
                                android:textColor="#ffffff"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/tvWeatherPressure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="#ffffff"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="10" >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="5dp"
                                    android:text="@string/humidity"
                                    android:textColor="#ffffff" />

                                <TextView
                                    android:id="@+id/tvWeatherHumi"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#ffffff" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="5dp"
                                    android:text="@string/wind"
                                    android:textColor="#ffffff" />

                                <TextView
                                    android:id="@+id/tvWeatherWind"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="#ffffff" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:gravity="right"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="5dp"
                                    android:text="@string/sunrise"
                                    android:textColor="#ffffff" />

                                <TextView
                                    android:id="@+id/tvWeatherSunrise"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:textColor="#ffffff" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="5dp"
                                    android:text="@string/sunset"
                                    android:textColor="#ffffff" />

                                <TextView
                                    android:id="@+id/tvWeatherSunset"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:textColor="#ffffff" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:background="#80000000"
                        android:padding="20dp"
                        android:text="@string/forecast"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />

                    <ListView
                        android:id="@+id/lvWeather"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:background="#80000000"
                        android:divider="@null"
                        android:dividerHeight="0dp" >
                    </ListView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>